--- a/index.css
+++ b/index.css
@@ -24,7 +24,7 @@ body{
 }
 
 .navbar{
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.9);
     position: fixed;
     width: 100%;
     top: 0;
@@ -33,6 +33,7 @@ body{
     align-items: center;
     box-shadow: 0px 25px 25px black inset;
     justify-content: space-between;
+    z-index: 2;
 }
 
 .bottom-nav{
@@ -58,7 +59,6 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-image: url("./images/carousel1.avif");
     background-size: cover;
     background-position: center;
     font-size: 2em;
@@ -70,6 +70,7 @@ body{
 .carousel-arrow{
     width: 2em;
     transform: scaleX(0.6);
+    z-index: 1;
 }
 
 .carousel-arrow:hover{
@@ -77,14 +78,19 @@ body{
 }
 
 .menu-options-container{
-    width: 40%;
+    width: 80%;
     margin: auto;
     color: white;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-between;
     margin-top: 3em;
     margin-bottom: 2em;
+}
+
+.menu-options-section{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .menu-options{
@@ -117,6 +123,17 @@ body{
     padding: 1em;
 }
 
+.hidden{
+    display: none;
+}
+
+.doubleborder{
+    border: 4px solid white;
+    outline: 2px solid white;
+    outline-offset: 3px;
+    padding: 4em;
+}
+
 .title-underline{
     width: 50%;
     height: 1px;
@@ -141,4 +158,5 @@ body{
     margin-top: 0px;
     margin-bottom: 1.5em;
     padding: 0;
+    text-align: center;
 }
