--- a/index.css
+++ b/index.css
@@ -60,6 +60,7 @@ body{
     align-items: center;
     justify-content: space-between;
     background-size: cover;
+    background-repeat: no-repeat;
     background-position: center;
     font-size: 2em;
     /* padding: 0em 1em; */
@@ -82,7 +83,7 @@ body{
     margin: auto;
     color: white;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     margin-top: 3em;
     margin-bottom: 2em;
